Completed hw-65